1-system/7-zitadel/zitadel.virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kong-id-virtual-service
spec:
  gateways:
    - istio-system/ezaf-gateway
  hosts:
    - id.localhost
  http:
    - match:
        - uri:
            prefix: /
      rewrite:
        uri: /
      route:
        - destination:
            host: zitadel.unique.svc.cluster.local
            port:
              number: 8080
          headers:
            request:
              set:
                X-Forwarded-Proto: https
